feat(cs-repo) Add default for URIs option

--- a/src/cs-repo/devcontainer-feature.json
+++ b/src/cs-repo/devcontainer-feature.json
@@ -6,6 +6,7 @@
   "options": {
     "uris": {
       "type": "string",
+      "default": "http://archive.ubuntu.com/ubuntu"
       "description": "Choose main repo server."
     },
     "suites": {
