--- a/src/cs-repo/devcontainer-feature.json
+++ b/src/cs-repo/devcontainer-feature.json
@@ -6,7 +6,7 @@
   "options": {
     "uris": {
       "type": "string",
-      "default": "http://archive.ubuntu.com/ubuntu"
+      "default": "http://archive.ubuntu.com/ubuntu",
       "description": "Choose main repo server."
     },
     "suites": {
